--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 
+<!-- 공유 되는 보드 -->
 <div style="display: flex">
+
+    <!-- 점령 지역 -->
     <div class="region_col">
         <div class="region_enamy">
             <div class="card" style="display: block">
@@ -46,7 +49,9 @@
             </div>
         </div>
     </div>
+    <!-- //점령 지역 -->
 
+    <!-- 점령 지역 -->
     <div class="region_col">
         <div class="region_enamy">
             <div class="card" style="display: block">
@@ -74,14 +79,18 @@
             </div>
         </div>
     </div>
+    <!-- //점령 지역 -->
+
 </div>
+<!-- //공유 되는 보드 -->
 
-
-
-
+<!-- 핸드 -->
 <div id="game-board" style="margin-top: 10px">
     <my-hand :cards="myHand"></my-hand>
 </div>
+<!-- //핸드 -->
+
+<!-- Vue 템플릿 -->
 
 <template id="my-hand">
     <div class="hand" style="display: block">
@@ -108,9 +117,12 @@
     </div>
 </template>
 
+<!-- //Vue 템플릿 -->
+
 
 <script>
 
+    //Vue 컴포넌트
     Vue.component('my-hand', {
         props: ['cards'],
         template: '#my-hand',
@@ -132,29 +144,21 @@
         props : ['title'],
         template: '#card-til'
     });
-    Vue.component('card-img', {
-        template: '<div class="card_img">\ncard_img\n</div>\n'
-    });
+
     Vue.component('card-img-big', {
         props : ['imgUrl'],
         template: '#card-img-big'
     });
 
-    Vue.component('card-disc', {
-        template: '<div class="card_disc">\n열심히 일함\n</div>'
-    });
-
-
+    //Vue 컨테이너 init
     var app = new Vue({
         el: '#game-board',
         data : {
-            card : { name : "Red 4", imgUrl : "hello"},
             myHand : [
                 { id : 1, name : "Red 4", imgUrl : "hello"},
                 { id : 2, name : "Red 3", imgUrl : "hello"},
                 { id : 3, name : "Red 1", imgUrl : "hello"}
-            ],
-            msg : "hell"
+            ]
         }
     })
 
