refac : region_col flexbox 로 colume 으로 지정해서 inline 인 card 컴포넌트에 display:block 을 하지 않아도 세로로 쌓이게 때문에, display:block 을 삭제

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
     <!-- 점령 지역 -->
     <div class="region_col">
         <div class="region_enamy">
-            <div class="card" style="display: block">
+            <div class="card">
                 <div class="card_til">Red 4</div>
                 <div class="card_img_big"></div>
             </div>
 
-            <div class="card" style="display: block">
+            <div class="card">
                 <div class="card_til">Red 4</div>
                 <div class="card_img_big"></div>
             </div>
 
-            <div class="card" style="display: block">
+            <div class="card">
                 <div class="card_til">Red 4</div>
                 <div class="card_img_big"></div>
             </div>
@@ -38,12 +38,12 @@
         </div>
 
         <div class="region_mine">
-            <div class="card" style="display: block">
+            <div class="card">
                 <div class="card_til">Red 4</div>
                 <div class="card_img_big"></div>
             </div>
 
-            <div class="card" style="display: block">
+            <div class="card">
                 <div class="card_til">Red 4</div>
                 <div class="card_img_big"></div>
             </div>
@@ -54,12 +54,12 @@
     <!-- 점령 지역 -->
     <div class="region_col">
         <div class="region_enamy">
-            <div class="card" style="display: block">
+            <div class="card">
                 <div class="card_til">Red 4</div>
                 <div class="card_img_big"></div>
             </div>
 
-            <div class="card" style="display: block">
+            <div class="card">
                 <div class="card_til">Red 4</div>
                 <div class="card_img_big"></div>
             </div>
@@ -73,7 +73,7 @@
         </div>
 
         <div class="region_mine">
-            <div class="card" style="display: block">
+            <div class="card">
                 <div class="card_til">Red 4</div>
                 <div class="card_img_big"></div>
             </div>
